--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,5 @@
 body {
     background-color: aqua;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: small;
-    color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
 
 .main {
@@ -75,6 +69,9 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: small;
+    color: white;
 }
 
 #arriba {
@@ -97,7 +94,7 @@ body {
     left: 25%;
 }
 
-.captura {
+#captura {
     background-color: black;
     width: 20px;
     height: 20px;
@@ -165,7 +162,7 @@ body {
     left: 25%;
 }
 
-.home {
+#home {
     background-color: black;
     width: 22px;
     height: 22px;
